# iota

./: .pre-commit-config.yaml  pyproject.toml
command_line/: iota.py  iota_filter_pickles.py  iota_gui_launch.py  iota_main.py  iota_mpi.py  iota_mpi_submit.py  iota_process.py  iota_run.py  iota_single_image.py  iota_track_images.py  linear_iota.py  mpi_iota.py
components/: iota_analysis.py  iota_base.py  iota_cctbx.py  iota_cctbx_ha14.py  iota_cmd.py  iota_controls.py  iota_dialogs.py  iota_dials.py  iota_frames.py  iota_gcomps.py  iota_gui_init.py  iota_image.py  iota_init.py  iota_input.py  iota_misc.py  iota_plotter.py  iota_processing.py  iota_threads.py  iota_tracker.py  iota_ui_base.py  iota_ui_controls.py  iota_ui_dialogs.py  iota_ui_frames.py  iota_ui_init.py  iota_utils.py  iota_vis_integration.py
components/gui/: __init__.py  base.py  controls.py  dialogs.py  phil_controls.py  plotter.py
iota/: double_gauss.py  iota_analysis.py  iota_cctbx.py  iota_cmd.py  iota_conversion.py  iota_dials.py  iota_gridsearch.py  iota_image.py  iota_init.py  iota_input.py  iota_integrate.py  iota_misc.py  iota_select.py  iota_triage.py  iota_vis_integration.py  visualize_integration.py
